# twitch2

./: .gitignore  flake.nix
backend/: backend.cabal
backend/main/: Main.hs
backend/src/: Backend.hs
backend/src/Backend/: Utils.hs
frontend/: index.html  main.css
